--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 </div>
 
                 <div class="section1-2">
-                    <img src="images/female/Group 8425.png" alt="" height="450px" width="320px">
+                    <img src="images/female/Group 8425.png" alt="" height="450px" width="320px" class="responsive">
                 </div>
 
             </div>
             <div class="section2">
                <div class="section2-1">
-                <img src="images/female/Person Image.png" alt="" height="350px" width="220px">
+                <img src="images/female/Person Image.png" alt="" height="350px" width="220px" class="responsive1">
                </div>
                <div class="section2-2">
                    <h1>About Me</h1>
@@ -35,7 +35,7 @@
                </div>
             </div>
             <div class="section3">
-                <h1>My Recipie</h1>
+                <h1 class="a">My Recipie</h1>
                 <p class="for-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, sint? Dolorum sunt debitis sapiente dolores assumenda voluptas voluptatibus delectus adipisci voluptatum, consequuntur, obcaecati accusantium quod, perferendis autem sequi expedita impedit.</p>
             </div>
             <div class="section4">
